--- a/src/repeatedController.html
+++ b/src/repeatedController.html
@@ -2,7 +2,7 @@
 <html ng-app>
   <head>
     <script src="angular.js"></script>
-    <script src="repeatedControllers.js"></script>
+    <script src="repeatedController.js"></script>
   </head>
   <body>
     <div ng-controller="TabController">
