Added a checkbox (foo) whose value is maintained directly on the contoller to show that the controllers can maintain state even though they get moved around

--- a/src/repeatedController.html
+++ b/src/repeatedController.html
@@ -11,6 +11,8 @@
                 <button ng-click="moveUp()">Move Up</button>
                 <button ng-click="moveDown()">Move Down</button>
                 <button ng-click="deleteItem()">Delete</button>
+                <input type="checkbox" ng-model="foo" />
+                <button ng-click="showFoo()">foo</button>
                 <input ng-model='item.amount'/>: {{item.name}}
             </li>
         </ul>
