Take advantage of ng-repeat creating a new scope for each item and that the item variable is added to the scope

--- a/src/repeatedController.html
+++ b/src/repeatedController.html
@@ -7,7 +7,7 @@
   <body>
     <div ng-controller="MainController">
         <ul>
-            <li ng-repeat="anItem in items" ng-controller="ItemController">
+            <li ng-repeat="item in items" ng-controller="ItemController">
                 <button ng-click="moveUp()">Move Up</button>
                 <button ng-click="moveDown()">Move Down</button>
                 <button ng-click="deleteItem()">Delete</button>
