--- a/tabs/index.html
+++ b/tabs/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <title>Tabs angular example</title>
+    <script src="jquery-1.8.3.js"></script>
     <script src="angular.js"></script>
     <script src="tabs.js"></script>
     <link href="tabs.css" rel="stylesheet" type="text/css" >
 </head>
-<body ng-app>
+<body ng-app="tabbedData">
 <article id="main" ng-controller="tabbed.entityController">
   <nav>
     <ul ng-controller="tabbed.tabController">
-      <li ng-repeat="tab in tabs()" ng-class="isSelected(tab.id)" ng-click="select(tab.id)">{{tab.title}}</li>
+      <li ng-repeat="tab in tabs()" ng-class="isSelected(tab.id)" ng-click="select(tab.id)" rearrangable>{{tab.title}}</li>
     </ul>
   </nav>
   <h1>{{name()}}</h1>
