Create and use a my-editable directive

--- a/src/repeatedController.html
+++ b/src/repeatedController.html
@@ -21,6 +21,8 @@
         <div>
             Total: {{total()}}
         </div>
+        <div>{{modelHandle.model.foo}}</div>
+        <div style="height: 20px; min-width: 20px; background-color: #adff2f;" my-editable ng-model="modelHandle.model.foo"/>
     </div>
   </body>
 
