--- a/tabs/index.html
+++ b/tabs/index.html
@@ -14,7 +14,7 @@
       <li ng-repeat="tab in tabs()" ng-class="isSelected(tab.id)" ng-click="select(tab.id)" rearrangable>{{tab.title}}</li>
     </ul>
   </nav>
-  <h1 my-editable ng-model="business().name"></h1>
+  <h1 my-editable ng-model="business().name" default-value="businessNamePlaceHolderText()"></h1>
   <section ng-controller="tabbed.tabController">
     <article ng-repeat="tab in tabs()" ng-switch on="tab.type" ng-show="isSelected(tab.id)">
       <div ng-switch-when="contactUs" ng-controller="tabbed.contactUsController">
