Add slide for peeking at state

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -40,7 +40,6 @@
 
 				<section>
 					<h1>An Introduction to Quantum Computing</h1>
-					<h3>With very little mathematics or physics</h3>
 					<p>
 						<small>Created by <a href="https://github.com/davidbkemp">David Kemp</a> / <a href="https://twitter.com/david_b_kemp">@david_b_kemp</a></small>
 					</p>
@@ -66,8 +65,11 @@
 				</section>
 
 				<section>
-					<h1>THE END</h1>
-					<h3>BY David Kemp</h3>
+					<h2>Peeking</h2>
+                    <p>Collapses to single randomly chosen state</p>
+                    <svg id="peek"></svg>
+                    <img id="peekingEye" class="peekingEye" src="eye.jpg">
+                    <button id="peekButton">Peek</button>
 				</section>
 
                 <section>
