Add slides about amplitude magnitudes

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -72,6 +72,21 @@
                     <button id="peekButton">Peek</button>
 				</section>
 
+				<section>
+					<h2>Amplitudes</h2>
+                    <p>Different states can have different "amplitudes"</p>
+                    <svg id="amplitudes"></svg>
+				</section>
+
+
+                <section>
+                    <h2>Peeking</h2>
+                    <p>Collapse favours larger amplitudes</p>
+                    <svg id="favouringLargerAmplitudes"></svg>
+                    <img id="favouringLargerAmplitudesPeekingEye" class="peekingEye" src="eye.jpg">
+                    <button id="favouringLargerAmplitudesPeekButton">Peek</button>
+                </section>
+
                 <section>
                     <svg id="calibration" width="500" height="500"><text class="qstate" opacity="0.1" y="200">000</text></svg>
                 </section>
