Add Phases page

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -78,7 +78,6 @@
                     <svg id="amplitudes"></svg>
 				</section>
 
-
                 <section>
                     <h2>Peeking</h2>
                     <p>Collapse favours larger amplitudes</p>
@@ -86,6 +85,18 @@
                     <img id="favouringLargerAmplitudesPeekingEye" class="peekingEye" src="eye.jpg">
                     <button id="favouringLargerAmplitudesPeekButton">Peek</button>
                 </section>
+
+                <section>
+                    <h2>Technically Speaking</h2>
+                    <p>"Peeking" is more commonly called "measurement"</p>
+                </section>
+
+                <section>
+                    <h2>Phase</h2>
+                    <p>Amplitudes have "phases"</p>
+                    <svg id="phases"></svg>
+                </section>
+
 
                 <section>
                     <svg id="calibration" width="500" height="500"><text class="qstate" opacity="0.1" y="200">000</text></svg>
