Add more about phases

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -93,7 +93,24 @@
 
                 <section>
                     <h2>Phase</h2>
-                    <p>Amplitudes have "phases"</p>
+                    <p>An amplitude has a phase as well as a magnitude</p>
+                    <svg width="400" height="400">
+                        <circle class="amplitude" cx="200" cy="200" r="200"></circle>
+                        <g transform="rotate(-45,200,200)">
+                            <line class="phaseLine" x1="200" y1="200" x2="400" y2="200"></line>
+                            <circle class="phaseLineEnd" cx="400" cy="200" r="6" ></circle>
+                        </g>
+                        <line stroke-dasharray="5,5" stroke-width="1" stroke="black" x1="200" y1="200" x2="400" y2="200"></line>
+                        <text x="280" y="100">r</text>
+                        <text x="220" y="200">&theta;</text>
+                    </svg>
+                    <p>r = magnitude</p>
+                    <p>&theta; = phase</p>
+                </section>
+
+                <section>
+                    <h2>Phase</h2>
+                    <p>Different amplitudes can have different "phases"</p>
                     <svg id="phases"></svg>
                 </section>
 
