Make the "not" operation transitions more explanatory.  Flesh out some more

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -93,6 +93,11 @@
 
                 <section>
                     <h2>Phase</h2>
+                    <p>To understand quantum computing, you must understand quantum phases.</p>
+                </section>
+
+                <section>
+                    <h2>Phase</h2>
                     <p>An amplitude has a phase as well as a magnitude</p>
                     <svg width="400" height="400">
                         <circle class="amplitudeCircle" cx="200" cy="200" r="200" />
@@ -109,9 +114,26 @@
                 </section>
 
                 <section>
+                    <h2>Huh?</h2>
+                </section>
+
+                <section>
                     <h2>Phase</h2>
                     <p>Different amplitudes can have different "phases"</p>
                     <svg id="phases" class='fullSizeDiagram'></svg>
+                </section>
+
+                <section>
+                    <h2>Huh?</h2>
+                </section>
+
+                <section>
+                    <h2>Phase</h2>
+                    <p>You can think of a phase as being like a compass heading</p>
+                </section>
+
+                <section>
+                    <p>But what affect does a phase have on a measurement?</p>
                 </section>
 
                 <section>
@@ -123,14 +145,22 @@
                 </section>
 
                 <section>
+                    <p>Then what is the point of a phase?</p>
+                </section>
+
+                <section>
+                    <p>All will be revealed soon.</p>
+                </section>
+
+                <section>
                     <h2>Classical Operators</h2>
                 </section>
 
                 <section>
                     <h2>"Not" operator</h2>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
-                    <button id="notOperatorBit0">Not bit 0</button>
                     <button id="notOperatorBit1">Not bit 1</button>
+                    <button id="notOperatorBit0">Not bit 0</button>
                 </section>
 
                 <section>
