Try using html escape codes &ldquo; and &rldquo;

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -157,7 +157,7 @@
                 </section>
 
                 <section>
-                    <h2>"Not" operator</h2>
+                    <h2>&ldquo;Not&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
                     <button id="notOperatorBit1">Not bit 1</button>
                     <button id="notOperatorBit0">Not bit 0</button>
