Spell NOT in all caps

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -157,10 +157,10 @@
                 </section>
 
                 <section>
-                    <h2>&ldquo;Not&rdquo; operator</h2>
+                    <h2>&ldquo;NOT&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
-                    <button id="notOperatorBit1">Not bit 1</button>
-                    <button id="notOperatorBit0">Not bit 0</button>
+                    <button id="notOperatorBit1">NOT bit 1</button>
+                    <button id="notOperatorBit0">NOT bit 0</button>
                 </section>
 
                 <section>
