Bit flipping NOT operator

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -40,6 +40,7 @@
 
 				<section>
 					<h1>An Introduction to Quantum Computing</h1>
+                                        <p>DRAFT</p>
 					<p>
 						<small>Created by <a href="https://github.com/davidbkemp">David Kemp</a> / <a href="https://twitter.com/david_b_kemp">@david_b_kemp</a></small>
 					</p>
@@ -156,8 +157,15 @@
                     <h2>Classical Operators</h2>
                 </section>
 
+                <section>
+                    <h2>&ldquo;NOT&rdquo; operator</h2>
+                    <svg class='fullSizeDiagram' id="bitFlipNotOperator"></svg>
+                    <button id="bitFlipNotOperatorBit1">NOT bit 1</button>
+                    <button id="bitFlipNotOperatorBit0">NOT bit 0</button>
+                </section>
+
                 <section>
-                    <h2>&ldquo;NOT&rdquo; operator</h2>
+                    <h2>&ldquo;NOT&rdquo; operator viewed as amplitude swapping</h2>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
                     <button id="notOperatorBit1">NOT bit 1</button>
                     <button id="notOperatorBit0">NOT bit 0</button>
