--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -165,7 +165,8 @@
                 </section>
 
                 <section>
-                    <h2>&ldquo;NOT&rdquo; operator viewed as amplitude swapping</h2>
+                    <h2>&ldquo;NOT&rdquo; operator</h2>
+                    <p>can be viewed as amplitude swapping</p>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
                     <button id="notOperatorBit1">NOT bit 1</button>
                     <button id="notOperatorBit0">NOT bit 0</button>
