--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -160,8 +160,10 @@
                 <section>
                     <h2>&ldquo;NOT&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="bitFlipNotOperator"></svg>
-                    <button id="bitFlipNotOperatorBit1">NOT bit 1</button>
-                    <button id="bitFlipNotOperatorBit0">NOT bit 0</button>
+                    <div>
+                        <button id="bitFlipNotOperatorBit1">NOT bit 1</button>
+                        <button id="bitFlipNotOperatorBit0">NOT bit 0</button>
+                    </div>
                 </section>
 
                 <section>
