--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -161,8 +161,7 @@
                     <h2>&ldquo;NOT&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="bitFlipNotOperator"></svg>
                     <div>
-                        <button id="bitFlipNotOperatorBit1">NOT bit 1</button>
-                        <button id="bitFlipNotOperatorBit0">NOT bit 0</button>
+                        <button id="bitFlipNotOperatorBit1">NOT b<sub>1</sub></button>  <button id="bitFlipNotOperatorBit0">NOT b<sub>0</sub></button>
                     </div>
                 </section>
 
@@ -170,8 +169,7 @@
                     <h2>&ldquo;NOT&rdquo; operator</h2>
                     <p>can be viewed as amplitude swapping</p>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
-                    <button id="notOperatorBit1">NOT bit 1</button>
-                    <button id="notOperatorBit0">NOT bit 0</button>
+                    <button id="notOperatorBit1">NOT b<sub>1</sub></button> <button id="notOperatorBit0">NOT b<sub>0</sub></button>
                 </section>
 
                 <section>
