Add confused images

--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -116,6 +116,8 @@
 
                 <section>
                     <h2>Huh?</h2>
+                    <img src="confusedStuden.jpg" />
+                    <small>http://www.flickr.com/photos/83633410@N07/7658298768/</small>
                 </section>
 
                 <section>
@@ -126,6 +128,7 @@
 
                 <section>
                     <h2>Huh?</h2>
+                    <img src="confusedCat.jpg" />
                 </section>
 
                 <section>
