--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -137,7 +137,7 @@
                 </section>
 
                 <section>
-                    <p>But what affect does a phase have on a measurement?</p>
+                    <h2>But what affect does a phase have on a measurement?</h2>
                 </section>
 
                 <section>
@@ -149,12 +149,16 @@
                 </section>
 
                 <section>
-                    <p>Then what is the point of a phase?</p>
+                    <h2>Then what is the point of a phase?</h2>
+                    <p>We will come back to this later.</p>
                 </section>
 
-                <section>
-                    <p>All will be revealed soon.</p>
-                </section>
+                <section>
+                    <h2>Operators</h2>
+                    <p>
+                       Quantum computation operators can be loosely
+                       
+                </section>
 
                 <section>
                     <h2>Classical Operators</h2>
