--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -12,7 +12,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
 		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
@@ -137,7 +137,7 @@
                 </section>
 
                 <section>
-                    <h2>But what affect does a phase have on a measurement?</h2>
+                    <h3>But what effect does a phase have on a measurement?</h3>
                 </section>
 
                 <section>
@@ -149,7 +149,7 @@
                 </section>
 
                 <section>
-                    <h2>Then what is the point of a phase?</h2>
+                    <h3>Then what is the point of a phase?</h3>
                     <p>We will come back to this later.</p>
                 </section>
 
