--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -156,8 +156,12 @@
                 <section>
                     <h2>Operators</h2>
                     <p>
-                       Quantum computation operators can be loosely
-                       
+                       Quantum computation operators can be loosely grouped
+                       into classical versus quantum.
+                    </p>
+                    <p>
+                       We will explore some of each...
+                    </p>
                 </section>
 
                 <section>
