--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -183,6 +183,14 @@
                     <button id="notOperatorBit1">NOT b<sub>1</sub></button> <button id="notOperatorBit0">NOT b<sub>0</sub></button>
                 </section>
 
+             <section>
+                    <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
+                    <svg class='fullSizeDiagram' id="CNotOperator"></svg>
+                    <div>
+                        <button id="CNot01">CNOT<sub>b<sub>1</sub>&rarr;</sub>b<sub>0</sub></button>  <button id="CNot10">CNOT <sub>b<sub>1</sub>&rarr;</sub>b<sub>0</sub></button>
+                    </div>
+                </section>
+
                 <section>
                     <h2>Special quantum operators</h2>
                 </section>
