--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -187,7 +187,7 @@
                     <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="CNotOperator"></svg>
                     <div>
-                        <button id="CNot01">CNOT<sub>b<sub>1</sub>&rarr;</sub>b<sub>0</sub></button>  <button id="CNot10">CNOT <sub>b<sub>1</sub>&rarr;</sub>b<sub>0</sub></button>
+                        <button id="CNot01">CNOT<sub>b<sub>1</sub>&rarr;b<sub>0</sub></sub></button>  <button id="CNot10">CNOT <sub>b<sub>1</sub>&rarr;b<sub>0</sub></sub></button>
                     </div>
                 </section>
 
