--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -185,9 +185,10 @@
 
              <section>
                     <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
+                     <p>Flip target bit when and only when control bit is 1</p>
                     <svg class='fullSizeDiagram' id="CNotOperator"></svg>
                     <div>
-                        <button id="CNot01">CNOT<sub>b<sub>1</sub>&rarr;b<sub>0</sub></sub></button>  <button id="CNot10">CNOT <sub>b<sub>1</sub>&rarr;b<sub>0</sub></sub></button>
+                        <button id="CNot10">CNOT<sub>b<sub>1</sub>&rarr;b<sub>0</sub></sub></button>  <button id="CNot01">CNOT <sub>b<sub>0</sub>&rarr;b<sub>1</sub></sub></button>
                     </div>
                 </section>
 
