--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -180,7 +180,9 @@
                     <h2>&ldquo;NOT&rdquo; operator</h2>
                     <p>can be viewed as amplitude swapping</p>
                     <svg class='fullSizeDiagram' id="notOperator"></svg>
-                    <button id="notOperatorBit1">NOT b<sub>1</sub></button> <button id="notOperatorBit0">NOT b<sub>0</sub></button>
+                    <div>
+                      <button id="notOperatorBit1">NOT b<sub>1</sub></button> <button id="notOperatorBit0">NOT b<sub>0</sub></button>
+                    </div>
                 </section>
 
              <section>
