--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -185,9 +185,14 @@
                     </div>
                 </section>
 
-             <section>
+                <section>
                     <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
-                     <p>Flip target bit when and only when control bit is 1</p>
+                     <p>One bit is designated the &ldquo;control&rdquo; bit,
+                        and another the &ldquo;target&rdquo; bit.</p>
+                     <p>The target bit is flipped when and only when the control bit is 1.</p>
+                </section>
+                <section>
+                    <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="CNotOperator"></svg>
                     <div>
                         <button id="CNot10">CNOT<sub>b<sub>1</sub>&rarr;b<sub>0</sub></sub></button>  <button id="CNot01">CNOT <sub>b<sub>0</sub>&rarr;b<sub>1</sub></sub></button>
