--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -187,10 +187,11 @@
 
                 <section>
                     <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
-                     <p>One bit is designated the &ldquo;control&rdquo; bit,
-                        and another the &ldquo;target&rdquo; bit.</p>
+                     <p>One bit is designated</p><p>the &ldquo;control&rdquo; bit.</p>
+                     <p>Another bit is designated</p><p>the &ldquo;target&rdquo; bit.</p>
                      <p>The target bit is flipped when and only when the control bit is 1.</p>
                 </section>
+
                 <section>
                     <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
                     <svg class='fullSizeDiagram' id="CNotOperator"></svg>
