--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -205,15 +205,25 @@
                 </section>
 
                 <section>
-                    <h2>Hadamard</h2>
+                    <h2>Hadamard of 0</h2>
                     <svg class='fullSizeDiagram'>
                         <g id="hadamard0"></g>
                         <g id="hadamardP" transform="translate(250,0)"></g>
                     </svg>
                 </section>
-			</div>
 
-		</div>
+                <section>
+                    <h2>Hadamard of 1</h2>
+                    <svg class='fullSizeDiagram'>
+                        <g id="hadamard1"></g>
+                        <g id="hadamardN" transform="translate(250,0)"></g>
+                    </svg>
+                </section>
+
+
+            </div>
+
+        </div>
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
