--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -218,6 +218,7 @@
                         <g id="hadamard1"></g>
                         <g id="hadamardN" transform="translate(250,0)"></g>
                     </svg>
+                    <p>Note the phase flip!</p>
                 </section>
 
 
