--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -187,8 +187,8 @@
 
                 <section>
                     <h2>&ldquo;Controlled NOT&rdquo; operator</h2>
-                     <p>One bit is designated</p><p>the &ldquo;control&rdquo; bit.</p>
-                     <p>Another bit is designated</p><p>the &ldquo;target&rdquo; bit.</p>
+                     <p>One bit is designated the &ldquo;control&rdquo; bit.</p>
+                     <p>Another bit is designated the &ldquo;target&rdquo; bit.</p>
                      <p>The target bit is flipped when and only when the control bit is 1.</p>
                 </section>
 
@@ -206,6 +206,7 @@
 
                 <section>
                     <h2>Hadamard of 0</h2>
+                    <p>Splits the amplitude in two.</p>
                     <svg class='fullSizeDiagram'>
                         <g id="hadamard0"></g>
                         <g id="hadamardP" transform="translate(250,0)"></g>
@@ -214,11 +215,11 @@
 
                 <section>
                     <h2>Hadamard of 1</h2>
+                    <p>Splits the amplitude in two, but flips the phase of 1</p>
                     <svg class='fullSizeDiagram'>
                         <g id="hadamard1"></g>
                         <g id="hadamardN" transform="translate(250,0)"></g>
                     </svg>
-                    <p>Note the phase flip!</p>
                 </section>
 
 
