--- a/ww.html
+++ b/ww.html
@@ -4,7 +4,7 @@
 <script src="src/wwrequester.js"></script>
 </head>
 <body>
-<textarea id='input>
+<textarea id='input'>
 </textarea>
 <button>go</button>
 </body>
