--- a/ww.html
+++ b/ww.html
@@ -1,11 +1,12 @@
-<HTML>
+<html>
 <head>
 <script src="src/jquery-1.8.3.js"></script>
 <script src="src/wwrequester.js"></script>
 </head>
 <body>
+<h1>Foo Sauce</h1>
 <textarea id='input' rows='20' cols='80'>
 </textarea>
 <button>go</button>
 </body>
-</HTML>
+</html>
