--- a/ww.html
+++ b/ww.html
@@ -5,7 +5,7 @@
 <script src="src/wwrequester.js"></script>
 </head>
 <body>
-<h1>Foo Sauce</h1>
+<h1>Foo Sauce 2</h1>
 <textarea id='input' rows='20' cols='80'>
 </textarea>
 <button>go</button>
