--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -222,6 +222,13 @@
                     </svg>
                 </section>
 
+                <section>
+                    <h2>Hadamard of 0</h2>
+                    <svg class='fullSizeDiagram' id="hadamardOperator0"></svg>
+                    <div>
+                        <button id="hadamard0">Hadamard</button>
+                    </div>
+                </section>
 
             </div>
 
