--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -226,7 +226,7 @@
                     <h2>Hadamard of 0</h2>
                     <svg class='fullSizeDiagram' id="hadamardOperator0"></svg>
                     <div>
-                        <button id="hadamard0">Hadamard</button>
+                        <button id="hadamard0Button">Hadamard</button>
                     </div>
                 </section>
 
