--- a/fiddle/index.html
+++ b/fiddle/index.html
@@ -8,10 +8,32 @@
 </head>
 
 <body>      
-Quantum computation visualisation
-<div class='buttons'>
-  <button id='hadamardBtn'>Hadamard</button>
+<h1>Quantum computation visualisation</h1>
+
+<div class='qvisButtons'>
+  <button id='notBtn1' class='qvisButtons_button'>Not<sub>1</sub></button>
+  <button id='notBtn0' class='qvisButtons_button'>Not<sub>0</sub></button>
+  <button id='notBtnAll' class='qvisButtons_button'>Not<sub>All</sub></button>
 </div>
+
+<div class='qvisButtons'>
+  <button id='cnotBtn1_0' class='qvisButtons_button'>CNot<sub>1&rarr;0</sub></button>
+  <button id='cnotBtn0_1' class='qvisButtons_button'>CNot<sub>0&rarr;1</sub></button>
+</div>
+
+<div class='qvisButtons'>
+  <button id='tBtn1' class='qvisButtons_button'>T<sub>1</sub></button>
+  <button id='tBtn0' class='qvisButtons_button'>T<sub>0</sub></button>
+  <button id='tBtnAll' class='qvisButtons_button'>T<sub>All</sub></button>
+</div>
+
+<div class='qvisButtons'>
+  <button id='hadamardBtn1' class='qvisButtons_button'>Hadamard<sub>1</sub></button>
+  <button id='hadamardBtn0' class='qvisButtons_button'>Hadamard<sub>0</sub></button>
+  <button id='hadamardBtnAll' class='qvisButtons_button'>Hadamard<sub>All</sub></button>
+</div>
+
+
 <svg id='svg' height='600px' class='jsqubits'></svg>
 <div id='log'>
 <p>Log...</p>
@@ -22,9 +44,8 @@ Quantum computation visualisation
 <script src='http://d3js.org/d3.v3.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js'></script>
 
-
 <script>jQuery(start)</script>
-<div>end</div>
+<div>end 3</div>
 
 
 </body>
