--- a/fiddle/index.html
+++ b/fiddle/index.html
@@ -52,8 +52,8 @@ Number of bits:
 <p>Log...</p>
 </div>
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.min.js" type="text/javascript"></script>
 <script src="jsqubitsvis.js" type="text/javascript"></script>
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
 <script src='http://davidbkemp.github.io/scratch/qtalk/js/jsqubits.js'></script>
 <script src='http://d3js.org/d3.v3.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js'></script>
