--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -241,6 +241,7 @@
 		<script src="lib/js/lodash.min.js"></script>
 		<script src="js/jsqubits.js"></script>
 		<script src="js/quantumTalk.js"></script>
+	        <script src="js/animatedQubits.js"></script>
 
 		<script>
 
