--- a/qtalk/index.html
+++ b/qtalk/index.html
@@ -239,6 +239,7 @@
 		<script src="lib/js/d3.v3.min.js"></script>
 		<script src="lib/js/jquery-2.0.2.min.js"></script>
 		<script src="lib/js/lodash.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.min.js" type="text/javascript"></script>
 		<script src="js/jsqubits.js"></script>
 		<script src="js/quantumTalk.js"></script>
 	        <script src="js/animatedQubits.js"></script>
