--- a/src/animatedQubits/example/index.html
+++ b/src/animatedQubits/example/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Animated Qubits</title>
-<script data-main="js/main" src="3rdParty/require.js"></script>
+<script data-main="js/main" src="bower_components/requirejs/require.js"></script>
 </head>
 
 <body>
