--- a/src/animatedQubits/example/index.html
+++ b/src/animatedQubits/example/index.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>Animated Qubits</title>
+<script src="bower_components/d3/d3.min.js" type="text/javascript"></script>
 <script data-main="js/main" src="bower_components/requirejs/require.js"></script>
 </head>
 
 <body>
 <h1>Simple Demonstration of Animated Qubits</h1>
+
+<svg id="svg" style="width: 200px; border: 1px solid black"></svg>
 </body>
 </html>
