--- a/src/animatedQubits/example/index.html
+++ b/src/animatedQubits/example/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Animated Qubits</title>
-<script src="bower_components/d3/d3.min.js" type="text/javascript"></script>
-<script data-main="js/main" src="bower_components/requirejs/require.js"></script>
+<script src="app/bower_components/d3/d3.min.js" type="text/javascript"></script>
+<script data-main="js/main" src="app/bower_components/requirejs/require.js"></script>
 </head>
 
 <body>
