--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -12,6 +12,7 @@
 
 <script src="app/bower_components/d3/d3.min.js" type="text/javascript"></script>
 <script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
+<script src="app/bower_components/d3-transform/src/d3-transform.js" type="text/javascript"></script>
 <script src="../../lib/jsqubits.js" type="text/javascript"></script>
 <script src="../../lib/qubitsGraphics.js" type="text/javascript"></script>
 <script src="../../animatedQubits.js" type="text/javascript"></script>
