--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -11,6 +11,7 @@
 <svg id="svg" style="width: 200px; border: 1px solid black"></svg>
 
 <script src="../../animatedQubits.js" type="text/javascript"></script>
+<script src="../../lib/animatedQubitsRenderer.js" type="text/javascript"></script>
 <script src="../../lib/qubitsGraphics.js" type="text/javascript"></script>
 <script src="../../lib/jsqubits.js" type="text/javascript"></script>
 <script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
