Start of amplitude disk rendering. Introduce calculator

--- a/src/animatedQubits/examples/usingRequire/index.html
+++ b/src/animatedQubits/examples/usingRequire/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="../animatedQubitsExample.css" />
 <title>Animated Qubits</title>
 <script data-main="js/main" src="app/bower_components/requirejs/require.js"></script>
 </head>
