--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="../animatedQubitsExample.css" />
 <title>Animated Qubits</title>
 </head>
 
@@ -12,6 +13,7 @@
 
 <script src="../../animatedQubits.js" type="text/javascript"></script>
 <script src="../../lib/animatedQubitsRenderer.js" type="text/javascript"></script>
+<script src="../../lib/qubitAnimationCalculator.js" type="text/javascript"></script>
 <script src="../../lib/qubitsGraphics.js" type="text/javascript"></script>
 <script src="../../lib/jsqubits.js" type="text/javascript"></script>
 <script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
