--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -8,9 +8,13 @@
 
 <body>
 <h1>Simple Demonstration of Animated Qubits</h1>
-
+<div>
+    <button id='hadamardButton'>Hadamard All</button>
+</div>
 <svg id="svg" style="width: 200px; border: 1px solid black"></svg>
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.3.0/lodash.min.js" type="text/javascript"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.6/q.min.js" type="text/javascript"></script>
 <script src="../../animatedQubits.js" type="text/javascript"></script>
 <script src="../../lib/animatedQubitsRenderer.js" type="text/javascript"></script>
 <script src="../../lib/qubitAnimationCalculator.js" type="text/javascript"></script>
