--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -13,16 +13,16 @@
 </div>
 <svg id="svg" style="width: 200px; border: 1px solid black"></svg>
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.3.0/lodash.min.js" type="text/javascript"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.6/q.min.js" type="text/javascript"></script>
 <script src="../../animatedQubits.js" type="text/javascript"></script>
 <script src="../../lib/animatedQubitsRenderer.js" type="text/javascript"></script>
 <script src="../../lib/qubitAnimationCalculator.js" type="text/javascript"></script>
 <script src="../../lib/qubitsGraphics.js" type="text/javascript"></script>
-<script src="../../lib/jsqubits.js" type="text/javascript"></script>
-<script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
 <script src="app/bower_components/d3/d3.min.js" type="text/javascript"></script>
+<script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
 <script src="app/bower_components/d3-transform/src/d3-transform.js" type="text/javascript"></script>
+<script src="app/bower_components/jsqubits/lib/jsqubits.js" type="text/javascript"></script>
+<script src="app/bower_components/q/q.js" type="text/javascript"></script>
+<script src="app/bower_components/lodash/dist/lodash.min.js" type="text/javascript"></script>
 
 <script src="js/main.js" type="text/javascript"></script>
 
