--- a/src/animatedQubits/examples/simpleImportsUsingMinifiedJs/index.html
+++ b/src/animatedQubits/examples/simpleImportsUsingMinifiedJs/index.html
@@ -11,11 +11,13 @@
 
 <svg id="svg" style="width: 200px; border: 1px solid black"></svg>
 
-<script src="../../animatedQubits.min.js" type="text/javascript"></script>
-<script src="../../lib/jsqubits.js" type="text/javascript"></script>
-<script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
 <script src="app/bower_components/d3/d3.min.js" type="text/javascript"></script>
+<script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
 <script src="app/bower_components/d3-transform/src/d3-transform.js" type="text/javascript"></script>
+<script src="app/bower_components/jsqubits/lib/jsqubits.js" type="text/javascript"></script>
+<script src="app/bower_components/q/q.js" type="text/javascript"></script>
+<script src="app/bower_components/lodash/dist/lodash.min.js" type="text/javascript"></script>
+<script src="../../animatedQubits.min.js" type="text/javascript"></script>
 
 <script src="js/main.js" type="text/javascript"></script>
 
