Render phase 2a and 2b states

--- a/src/animatedQubits/examples/usingRequire/index.html
+++ b/src/animatedQubits/examples/usingRequire/index.html
@@ -9,7 +9,9 @@
 
 <body>
 <h1>Simple Demonstration of Animated Qubits</h1>
-
-<svg id="svg" style="width: 200px; border: 1px solid black"></svg>
+<div>
+    <button id='hadamardButton'>Hadamard All</button>
+</div>
+<svg id="svg" style="width: 500px; border: 1px solid black"></svg>
 </body>
 </html>
