--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -9,9 +9,9 @@
 <body>
 <h1>Simple Demonstration of Animated Qubits</h1>
 <div>
-    <button id='hadamardButton'>Hadamard All</button>
+    <button id='hadamardButton' onclick="hadamardAll()">Hadamard All</button>
 </div>
-<svg id="svg" style="width: 200px; border: 1px solid black"></svg>
+<svg id="svg" style="width: 600px; border: 1px solid black"></svg>
 
 <script src="../../animatedQubits.js" type="text/javascript"></script>
 <script src="../../lib/animatedQubitsRenderer.js" type="text/javascript"></script>
