--- a/src/animatedQubits/examples/simpleImportsUsingMinifiedJs/index.html
+++ b/src/animatedQubits/examples/simpleImportsUsingMinifiedJs/index.html
@@ -8,8 +8,10 @@
 
 <body>
 <h1>Simple Demonstration of Animated Qubits</h1>
-
-<svg id="svg" style="width: 200px; border: 1px solid black"></svg>
+<div>
+    <button id='hadamardButton' onclick="hadamardAll()">Hadamard All</button>
+</div>
+<svg id="svg" style="width: 600px; border: 1px solid black"></svg>
 
 <script src="app/bower_components/d3/d3.min.js" type="text/javascript"></script>
 <script src="app/bower_components/d3-measure-text/lib/d3-measure-text.js" type="text/javascript"></script>
