support a skipAnimationSteps flag

--- a/src/animatedQubits/examples/simpleImports/index.html
+++ b/src/animatedQubits/examples/simpleImports/index.html
@@ -10,10 +10,12 @@
 <h1>Simple Demonstration of Animated Qubits</h1>
 <div>
     <button id='hadamardButton' onclick="hadamardAll()">Hadamard All</button>
+    <button id='tButton' onclick="tAll()">T (aka &pi;/8) All</button>
 </div>
 <svg id="svg" style="width: 600px; border: 1px solid black"></svg>
 
 <script src="../../animatedQubits.js" type="text/javascript"></script>
+<script src="../../lib/animatedQubitsCore.js" type="text/javascript"></script>
 <script src="../../lib/animatedQubitsRenderer.js" type="text/javascript"></script>
 <script src="../../lib/qubitAnimationCalculator.js" type="text/javascript"></script>
 <script src="../../lib/qubitsGraphics.js" type="text/javascript"></script>
